attempting to get the margins under control (and failing)

--- a/Standard/OMG_OntoIOp_current.tex
+++ b/Standard/OMG_OntoIOp_current.tex
@@ -673,8 +673,12 @@ author=,date=,id=,replyto=,type=}{}%
 
 % For Habil
 %\usepackage[text={12.3cm,19.3cm},centering]{geometry}
-\usepackage[text={12.3cm,19.3cm}]{geometry}
-
+\usepackage{geometry}
+% \geometry{headheight=17pt,
+%   includeheadfoot,
+%   left=4.4cm, right=4.4cm, bottom=5cm, top=5cm}
+ \geometry{paper=a4paper, headheight=17pt,   includeheadfoot,
+   left=4.4cm, right=4.4cm, bottom=5cm, top=5cm, bindingoffset=0cm}
 
 \begin{document}
 
