--- a/Standard/OMG_OntoIOp_current.tex
+++ b/Standard/OMG_OntoIOp_current.tex
@@ -722,7 +722,7 @@ author=,date=,id=,replyto=,type=}{}%
 \bigskip
 \begin{flushleft}
 \sffamily \upshape \fontsize{24}{32}\selectfont \bfseries
-The Distributed Ontology, Modeling, and Specification Language\tm
+The Distributed Ontology, Modeling, and Specification Language
 \end{flushleft}
 
 
@@ -6881,7 +6881,8 @@ $$sem(\Gamma, Set\{elem_1, \ldots, elem_n\}) = G$$
 }
 
 If $networkElement$ is a \syntax{NetworkElement},
-$$sem(\Gamma, G, networkElement) = insert(G, \Gamma, networkElement.\syntax{elementRef}.\syntax{iri}, networkElement.\syntax{id})$$
+$sem(\Gamma, G, networkElement)= $  
+\hspace*{\fill} \\$insert(G, \Gamma, networkElement.\syntax{elementRef}.\syntax{iri}, networkElement.\syntax{id})$
 
 
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
@@ -6923,7 +6924,7 @@ $$sem(\Gamma, G, excludedElem) = removePaths(\Gamma, G, iri_1, iri_2)$$
 \noindent
 where
 $iri_1 = excludedElem.\syntax{elementRef}.\syntax{iri}$
-and $iri_2 = excludedElem.\syntax{elementRef2}.\syntax{iri})$.
+and \\ $iri_2 = excludedElem.\syntax{elementRef2}.\syntax{iri})$.
 
 \ssclause{Semantics of OMS}
 
@@ -7095,12 +7096,12 @@ is defined similarly for the other three alternatives of $O.\syntax{closureType}
 only the class of realizations differs:
 \begin{itemize}
 \item if $O.\syntax{closureType} = \syntax{maximize}$,
-$\cM =
+\\ $\cM =
         \{ M \in  \Mod(O') \mid  M \text{ is maximal in } \Mod(O')\}$
-\item if $O.\syntax{closureType} = \syntax{free}$,
+\item if $O.\syntax{closureType} = \syntax{free}$, \\
 $\cM =
-        \{ M \in  \Mod(O') \mid  M \text{ is initial in } \Mod(O')\}$
-\item if $O.\syntax{closureType} = \syntax{cofree}$,
+        \{ M \in  \Mod(O') \mid  M \text{ is initial in } \Mod(O')\}$ 
+\item if $O.\syntax{closureType} = \syntax{cofree}$,\\
 $\cM =
         \{ M \in  \Mod(O') \mid  M \text{ is terminal in } \Mod(O')\}$
 \end{itemize}
@@ -7114,7 +7115,7 @@ category theory.
 \semdom{
 \begin{array}{ll}
  sem(\Gamma, (\cI, \Sigma, \cM, \Delta),\syntax{ExtendingOMS})) = (\Gamma',(\cI',\Sigma',\cM', \Delta'))\\
- \quad  : (LogicalEnvironment, (Institution,Signature,RealizationClass, Sentences))
+: (LogicalEnvironment, (Institution,Signature,RealizationClass, Sentences))
 \end{array}
 }
 
@@ -7168,11 +7169,10 @@ $\cM'' =
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 
 \sssclause{Semantics of OMS}
-
 \semdom{
-\begin{array}{ll}
- sem(\Gamma,\syntax{OMS})& = (\Gamma',(\cI,\Sigma,\cM, \Delta))\\
- & : (LogicalEnvironment, (Institution,Signature,RealizationClass, Sentences))
+\begin{array}{l}
+ sem(\Gamma,\syntax{OMS}) = (\Gamma',(\cI,\Sigma,\cM, \Delta))\\
+  : (LogicalEnvironment, (Institution,Signature,RealizationClass, Sentences))
 \end{array}
 }
 
@@ -7184,11 +7184,11 @@ The semantics for an \syntax{ExtendingOMS} has been defined above.
 If $o$ is a \syntax{ClosureOMS},
 $$sem(\Gamma, O) = (\Gamma'',(I,\Sigma,\cM',\bot))$$
 where
-
 \begin{align*}
-(\Gamma',(I,\Sigma,\cM,\Delta)) &= sem(\Gamma, O.\syntax{oms}),  & \Sigma_{\mathit{closure}} &=sem(\Gamma', \Sigma,O.\syntax{closure}.\syntax{circClosure}), \\
-\Sigma_{\mathit{var}} & = sem(\Gamma',\Sigma,O.\syntax{closure}.\syntax{circVars}),
-& \Sigma_{\mathit{fixed}} &=\Sigma \setminus (\Sigma_{\mathit{closure}} \cup \Sigma_{\mathit{var}})
+(\Gamma',(I,\Sigma,\cM,\Delta)) &= sem(\Gamma, O.\syntax{oms}),  \\
+ \Sigma_{\mathit{closure}} &=sem(\Gamma', \Sigma,O.\syntax{closure}.\syntax{circClosure}), \\
+\Sigma_{\mathit{var}} &= sem(\Gamma',\Sigma,O.\syntax{closure}.\syntax{circVars}), \\ 
+ \Sigma_{\mathit{fixed}} &=\Sigma \setminus (\Sigma_{\mathit{closure}} \cup \Sigma_{\mathit{var}})
 \end{align*}
 and
 \begin{itemize}
@@ -7241,7 +7241,7 @@ $$sem(\Gamma, O) = (\Gamma'',(\cI,\Sigma,\cM,\Delta))$$
 \begin{itemize}
   \item $\cI = J$,
   \item $\Sigma = \Sigma'$, when
-   $sem(\Gamma, \Sig(O.\syntax{oms}), O.\syntax{reduction}) = ((\Phi, \alpha, \beta) : \Inst(O.\syntax{oms}) \to J,\sigma:\Sigma'\to \Phi(\Sig(O.\syntax{oms})))$,
+   $sem(\Gamma, \Sig(O.\syntax{oms}), O.\syntax{reduction}) = $\\  $((\Phi, \alpha, \beta) : \Inst(O.\syntax{oms}) \to J,\sigma:\Sigma'\to \Phi(\Sig(O.\syntax{oms})))$,
   \item $\cM = \{\beta_\Sigma(M)\forget{\sigma} \mid M\in \Mod(O.\syntax{oms})\}$
   \item $\Delta = \bot$
   \item $\Gamma''$ is obtained from
@@ -7296,13 +7296,13 @@ $$sem(\Gamma, O) = (\Gamma'',(\cI'',\Sigma',\cM,\Delta))$$
         and with a new edge from the node of $O.\syntax{oms}$ to the node of $O$
         labeled with $(\rho,\iota: \Phi(\Sigma) \to \Sig(O.\syntax{oms}))$
 \end{itemize}
-\noindent where $(\rho = (\Phi,\alpha,\beta):\cI\to\cI',\Sigma) = sem(\Gamma, (\Inst(O.\syntax{oms}), \Sig(O.\syntax{oms})), O.\syntax{approximation})$.
+\noindent where  $(\rho = (\Phi,\alpha,\beta):\cI\to\cI',\Sigma) =$ \\ $sem(\Gamma, (\Inst(O.\syntax{oms}), \Sig(O.\syntax{oms})), O.\syntax{approximation})$.
 
 %Filtering
 The semantics of a \syntax{FilteringOMS} $O$
 is defined by case distinction.
 Let
- $(\Gamma',(\cI,\Sigma,\cM, \Delta)) = sem(\Gamma, O.\syntax{oms})$ and
+ $(\Gamma',(\cI,\Sigma,\cM, \Delta)) = sem(\Gamma, O.\syntax{oms})$ and \\
  $(c, \cI',\Sigma',\Delta') = sem(\Gamma', (\cI, \Sigma, \cM, \Delta), O.\syntax{filtering})$.
 
 If $c = keep$,
@@ -7348,7 +7348,7 @@ $$sem(\Gamma, O) = (\Gamma'',(\cI',\Sigma',\cM',\Delta'))$$
 \noindent where
 \begin{itemize}
   \item $\cI' = \cI$ where
-    $\Inst(O_1) \bigcup \Inst(O_2) =(\cI, (\Phi_1, \alpha_1,\beta_1) : \Inst(O_1) \rightarrow \cI,
+    $\Inst(O_1) \bigcup \Inst(O_2) =$  \\$ (\cI, (\Phi_1, \alpha_1,\beta_1) : \Inst(O_1) \rightarrow \cI,
                     (\Phi_2, \alpha_2,\beta_2) : \Inst(O_2) \rightarrow \cI)$
   \item $\Sigma' = \Phi_1(\Sig(O_1)) \cup \Phi_2(\Sig(O_2))$
   \item $\cM' = \{ M\in \Mod^\cI(\Sigma') \mid \beta_{\Sigma_i}(M\forget{\Phi_i(\Sig(O_i))}) \in \Mod(O_i), \text{ for } i=1,2 \}$
@@ -7380,7 +7380,7 @@ $$sem(\Gamma, O) = (\Gamma'',(\cI',\Sigma',\cM',\Delta'))$$
   $O.\syntax{extension}$ must be the same)
   \item $\Sigma' = \Sig(O.\syntax{oms}) \cup
   \Sig(sem(\Gamma,
-       (\Inst(O.\syntax{oms}), \Sig(O.\syntax{oms}), \Mod(O.\syntax{oms}), \Th(O.\syntax{oms}) ),
+       (\Inst(O.\syntax{oms}), \Sig(O.\syntax{oms}), \Mod(O.\syntax{oms}),$ \\ $ \Th(O.\syntax{oms}) ),
   O.\syntax{extension})$
   \item $\cM' = \{ M\in \Mod(\Sigma') \mid M\forget{\Sig(O.\syntax{oms})} \in \Mod(O.\syntax{oms})
   \text{ and }
@@ -7413,7 +7413,7 @@ $$sem(\Gamma, O) = (\Gamma'',(\cI',\Sigma',\cM',\Delta'))$$
 \noindent where
 \begin{itemize}
   \item $\cI' = \cI$,
-  \item $\Sigma' = \Sigma$, where $(\cI,\Sigma,  \{\mu_i\}_{i\in |G|})$ is the colimit of the graph $G = sem(\Gamma,O.\syntax{network})$,
+  \item $\Sigma' = \Sigma$, where $(\cI,\Sigma,  \{\mu_i\}_{i\in |G|})$ is the colimit of the graph \\ $G = sem(\Gamma,O.\syntax{network})$,
   \item $\Delta' = \cup_{i\in |G|} \mu_i(\Th(O_i))$, where $O_i$ is the OMS label of the node $i$ in $G$
   \item $\cM' =  \{ M\in\Mod(\Sigma) \mid M\forget{\mu_i} \in \Mod(O_i), i\in |G| \}$, where $O_i$ is the OMS label of the node $i$ in $G$.
   \item $\Gamma''$ is obtained from $\Gamma$ by adding to $\Gamma.imports$
@@ -7529,7 +7529,7 @@ is given by
  \item
 $\sigma =
 \iota: \Sigma' \to \Phi(\Sigma)$, where
-$\Sigma' = sem(\Gamma.\{\current=(lang', logic', ser')\}, \Phi(\Sigma), O.\syntax{reduction}.\syntax{symbolList})$,
+$\Sigma' = sem(\Gamma.\{\current=(lang', logic', ser')\}, $ \\ $ \Phi(\Sigma), O.\syntax{reduction}.\syntax{symbolList})$,
 $lang'$ and $ser'$ are the default language and serialization for logic $logic'$
 and $\iota$ is the inclusion morphism.
 \end{itemize}
@@ -7573,7 +7573,7 @@ is
 If $s_1,\ldots, s_n$ are all \syntax{Symbol}s,
 $$sem(\Gamma, \Sigma, Set\{s_1,\ldots, s_n\}) = \Sigma'$$
 where $\Sigma'$ is the smallest sub-signature of $\Sigma$ containing
-$sem(\Gamma, \Sigma,s_1), \ldots,
+$sem(\Gamma, \Sigma,s_1), \ldots,$ \\ $
 sem(\Gamma,\Sigma,s_n)$, if such a sub-signature exists and is otherwise undefined.
 
 
@@ -7589,7 +7589,7 @@ sem(\Gamma,\Sigma, \syntax{SymbolMap})& = \sigma:\Sigma\to\Sigma'\\
 }
 
 If $r$ is a \syntax{SymbolMap} such that for every
-\syntax{SymbolMapItem} $gItem$ in $r.\syntax{generalSymbolMapItem}$
+\syntax{SymbolMapItem} $gItem$ in \\ $r.\syntax{generalSymbolMapItem}$
 we have that $gItem.\syntax{source}$ is a symbol in $|\Sigma|$
 and
 for every
@@ -7602,7 +7602,7 @@ $\sigma$ must be the unique signature morphism with the properties
 \item $\sigma$ matches $r$: for each \syntax{SymbolMapItem}
 $r.\syntax{generalSymbolMapItem}$ $gItem$ in
 $r.\syntax{generalSymbolMapItem}$, we have that
-$|\sigma|(gItem.\syntax{source}) = gItem.\syntax{target}$ and for each
+$|\sigma|(gItem.\syntax{source}) =$ \\ $gItem.\syntax{target}$ and for each
 \syntax{Symbol} $s$ in $r.\syntax{generalSymbolMapItem}$,
 $|\sigma|(s) = s$,
 \item $\sigma$ is the identity outside the domain of $r$:
@@ -7793,7 +7793,7 @@ where $sem(\Gamma, (\cI, \Sigma, \cM, \Delta), f.\syntax{basicOMSOrSymbolList}) 
 }
 
 If $O$ is a \syntax{BasicOMS}, we have defined
-$sem(\Gamma,(\cI,\Sigma,\cM,\Delta), O) = (Gamma,(\cI',\Sigma',\cM',\Delta'))$
+$sem(\Gamma,(\cI,\Sigma,\cM,\Delta), O) =$ \\ $(Gamma,(\cI',\Sigma',\cM',\Delta'))$
 and the semantics of $O$ as a \syntax{BasicOMSOrSymbolList} is
 $(\cI',\Sigma',\cM',\Delta')$.
 
@@ -7806,8 +7806,8 @@ $sem(\Gamma,(\cI,\Sigma,\cM,\Delta), s) = (\cI, sem(\Gamma,\Sigma,s), \emptyset,
 
 \semdom{
 \begin{array}{ll}
- sem(\Gamma,(\cI,\Sigma,\cM,\Delta),  \syntax{Extension})= (\Gamma',(\cI,\Sigma',\cM',\Delta'))\\
-\quad : (LogicalEnvironment, (Institution,Signature,RealizationClass, Sentences))
+ sem(\Gamma,(\cI,\Sigma,\cM,\Delta),  \syntax{Extension})= (\Gamma',(\cI,\Sigma',\cM',\Delta')) : \\
+(LogicalEnvironment, (Institution,Signature,RealizationClass, Sentences))
 \end{array}
 }
 
@@ -7912,7 +7912,7 @@ defined if $\cM$ is a singleton.
 \semdom{
 \begin{array}{ll}
  sem(\Gamma,\syntax{OMSReference}) = (\Gamma',(\cI,\Sigma,\cM,\Delta))\\
-\quad : (LogicalEnvironment,(Institution, Signature,RealizationClass, Sentences))
+: (LogicalEnvironment,(Institution, Signature,RealizationClass, Sentences))
 \end{array}
 }
 
@@ -8133,7 +8133,8 @@ $$
 
    \item $(L_1, L_2) = sem(\Gamma, d.\syntax{interpretationType})$
    \item $\rho = (\Phi,\alpha,\beta):
-             \Inst(L_1) \to \Inst(L_2)$ is the comorphism given by $sem(\Gamma, d.\syntax{omsLanguageTranslation})$.\\ If $d.\syntax{OMSLanguageTranslation}$ is missing, the default translations between the logics is selected.
+             \Inst(L_1) \to \Inst(L_2)$ is the comorphism given by \\
+			 $sem(\Gamma, d.\syntax{omsLanguageTranslation})$.\\ If $d.\syntax{OMSLanguageTranslation}$ is missing, the default translations between the logics is selected.
    \item    $\sigma = sem(\Gamma.\{\current=(lang, logic', ser)\}, \Phi(\Sig(L_1)), \Sig(L_2), d.\syntax{symbolMap})$,
 where $\Gamma.\current=(lang, logic,ser)$ and $logic'$ is the target logic of $\rho$, or,
 if $d.\syntax{symbolMap}$ is missing, $\sigma$ is the identity signature
@@ -8181,9 +8182,9 @@ where $ \Gamma' =\Gamma[d.\syntax{interpretationName} \mapsto sem(\Gamma, d.\syn
 \sssclause{Semantics of interpretation types}
 
 \semdom{
-\begin{array}{ll}
-sem(\Gamma, \syntax{InterpretationType})& = ((N_1,\cI_1,\Sigma_1,\cM_1,\Delta_1),(N_2,\cI_2,\Sigma_2,\cM_2,\Delta_2))\\
- & : (NodeLabel,NodeLabel)
+\begin{array}{l}
+sem(\Gamma, \syntax{InterpretationType}) = \\ ((N_1,\cI_1,\Sigma_1,\cM_1,\Delta_1),(N_2,\cI_2,\Sigma_2,\cM_2,\Delta_2))\\
+  : (NodeLabel,NodeLabel)
 \end{array}
 }
 
@@ -8715,14 +8716,14 @@ If $d$ is an  \syntax{AlignmentDefinition},
 $$sem(\Gamma, d) = \Gamma' $$
 \noindent
 where
-$sem(\Gamma,d.\syntax{alignmentType}) = (\Gamma_0,L_1, L_2)$
+$sem(\Gamma,d.\syntax{alignmentType}) = (\Gamma_0,L_1, L_2)$ \\
 and
 $\Gamma'=\Gamma_0[d.\syntax{AlignmentName} \mapsto (G,L'_1,L'_2)]
 $,\\
 where $(L'_1,L'_2) = sem(\Gamma, L_1, L_2, d.\syntax{alignmentSemantics})$,\\
 $card=d.\syntax{alignmentCardinality}$ or, when this is missing,
 $card=('1','1')$,\\
-$aSem = d.\syntax{alignmentSemantics}$ or, when this is missing,
+$aSem = d.\syntax{alignmentSemantics}$ or, when this is missing, \\
 $aSem = \syntax{single-domain}$,\\
 and $G = sem(\Gamma_0, L'_1, L'_2, card, aSem, d.\syntax{correspondence})$.
 
@@ -8803,10 +8804,10 @@ $L_B = (alignName++"\_bridge", \cI ,\Sigma,\Mod((\Sigma,\Delta)),\Delta)$.
 \sssclause{Semantics of sets of correspondences}
 
 \semdom{\begin{footnotesize}
-\begin{array}{ll}
-sem(\Gamma, \Sigma_1,\Sigma_2, \syntax{AlignmentSemantics}, Set(\syntax{Correspondence}))& = (\Sigma_s,\Sigma_t,(\cI,\Sigma,\Delta),\phi_s:\Sigma_s\to\Sigma,\phi_t:\Sigma_t\to\Sigma, smap, cvalues)\\
- & : (Signature,Signature,(Institution,Signature,Sentences), \\
-& SignatureMorphism,SignatureMorphism,MapOfSymbols,Bool)
+\begin{array}{l}
+sem(\Gamma, \Sigma_1,\Sigma_2, \syntax{AlignmentSemantics}, Set(\syntax{Correspondence})) =\\ (\Sigma_s,\Sigma_t,(\cI,\Sigma,\Delta),\phi_s:\Sigma_s\to\Sigma,\phi_t:\Sigma_t\to\Sigma, smap, cvalues)\\
+  : (Signature,Signature,(Institution,Signature,Sentences), \\
+ SignatureMorphism,SignatureMorphism,MapOfSymbols,Bool)
 \end{array}
 \end{footnotesize}
  }
@@ -8819,7 +8820,7 @@ $$sem(\Gamma, \Sigma_1,\Sigma_2, aSem, Set(c_1,\ldots,c_n)) = (\Sigma_s,\Sigma_t
 $sem(\Gamma, \Sigma_1,\Sigma_2, (1, \syntax{equivalent}), c_i) = (clist_i, cvalues_i)$ for $i=1,\ldots,n$,\\
 $cvalues = \lor_{i=1,\ldots,n}cvalues_i$,\\
 $smap = \{s^1_i\mapsto s^2_i\}$,\\
-$(\cI, \Sigma,\Delta, \phi_s:\Sigma_s\to\Sigma,\phi_t:\Sigma_t\to\Sigma) = \mathit{theoryOfCorrespondences}_{\Gamma.logic}(
+$(\cI, \Sigma,\Delta, \phi_s:\Sigma_s\to\Sigma,\phi_t:\Sigma_t\to\Sigma) =$ \\$  \mathit{theoryOfCorrespondences}_{\Gamma.logic}(
 aSem, \Sigma_1,\Sigma_2,clist_1 ++ \ldots ++ clist_n)$.
 
 
@@ -8899,9 +8900,9 @@ $L_2 = (aName', \cI_2,\Sigma_2,\cM_2,\Delta_2)$
 
 $$sem(\Gamma, L_1, L_2, s) = (rel(L_1), rel(L_2))$$
 \noindent where $$ rel(L) = \begin{cases}
-                                   (L_1,L_2) & \mbox{if } s = \syntax{single-domain}\\
+                                   (L_1,L_2)  \mbox{\qquad\qquad\qquad  if } s = \syntax{single-domain}\\
                                    (name_1,\cI_1,\Sigma'_1,\cM'_1,\Delta'_1),
-                                   (name_2,\cI_2,\Sigma'_2,\cM'_2,\Delta'_2)& \mbox{otherwise}
+                                   (name_2,\cI_2,\Sigma'_2,\cM'_2,\Delta'_2) \mbox{\quad otherwise}
                                                                                                                   \end{cases}$$
                                                                                                                   \noindent
 $relativize_{\cI_1}(\Sigma_1,\Delta_1) = (\Sigma'_1,\Delta'_1)$,
