urls are black, bug with autoquotes (not fixed, but just commented out)

--- a/Standard/OMG_OntoIOp_current.tex
+++ b/Standard/OMG_OntoIOp_current.tex
@@ -242,8 +242,8 @@
 \usepackage[babel]{csquotes}
 %%\MakeAutoQuote{â}{â}
 %%\MakeAutoQuote*{â}{â}
-\MakeAutoQuote{“}{”}
-\MakeAutoQuote*{‘}{’}
+%\MakeAutoQuote{“}{”}
+%\MakeAutoQuote*{‘}{’}
 
 %% Hyperref
 \usepackage[
@@ -260,7 +260,7 @@
     colorlinks,
     linkcolor=black,
     citecolor=black,
-    urlcolor=linkcolor
+    urlcolor=black
 }
 
 
